Fixed up the spacing and the issues with onEnded in the ReactPlayer.

--- a/src/styles/components/playerTemplate.less
+++ b/src/styles/components/playerTemplate.less
@@ -1,5 +1,5 @@
 body {
-    background: #000;
+    background: @black;
     overflow: hidden;
 }
 
@@ -22,7 +22,7 @@ body {
 }
 
 .react-player-container {
-    border-top: 1px solid #D3D3D3;
+    border-top: 1px solid @light-grey;
     position: absolute;
     display: flex;
     bottom: 0;
