--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,8 +1,10 @@
 // colors
 @sodatonePinkColor: #ef2d56;
 @sodatoneGreyColor: #f5f5f5;
+@light-grey: #D3D3D3;
 @grey: #696969;
 @white: #ffffff;
+@black: #000000;
 
 // breakpoints
 @tablet-min: 768px;
